tests/types/errors/update_const.mog
const i32 count = 1;
++count;
